# hindsight

./: .gitignore
.github/workflows/: test.yml
hindsight-agent-rs/: Cargo.toml
hindsight-agent-rs/src/: api.rs  config.rs  main.rs
hindsight-agent-rs/src/commands/: agents.rs  documents.rs  ingest.rs  mod.rs  recall.rs  retain.rs  setup.rs  wiki.rs
hindsight-agent-setup/src/: cli.ts
hindsight-all/hindsight/: embedded.py
hindsight-android-sdk/: settings.gradle.kts
hindsight-android-sdk/app/: build.gradle.kts
hindsight-api-slim/: pyproject.toml
hindsight-api-slim/hindsight_api/: config.py  migrations.py  migrations_oracle.py
hindsight-api-slim/tests/: conftest.py  test_causal_relations.py  test_causal_relationships.py  test_config_validation.py  test_consolidation.py  test_db_abstraction.py  test_delta_editorial_fusion.py  test_document_tracking.py  test_entity_labels.py  test_entity_resolver_pg_trgm.py  test_fact_extraction_agent_experience.py  test_fact_extraction_quality.py  test_horse_observations.py  test_http_api_integration.py  test_link_expansion_retrieval.py  test_llm_provider.py  test_memory_links_deferred_fk.py  test_mental_model_delta.py  test_mental_models.py  test_multilingual.py  test_observations.py  test_oracle_http_integration.py  test_read_backend.py  test_reflect_agent.py  test_retain.py  test_temporal_ranges.py
hindsight-cli/src/: api.rs  main.rs
hindsight-clients/go/: model_operation_response.go  model_operation_status_response.go
hindsight-docs/blog/: 2026-04-21-hindsight-10k-stars.md  (+6 more)
scripts/: release-integration.sh
(+58 files in other folders)
