[package]
name = "hindsight-agent"
version = "0.1.0"
edition = "2021"
description = "Agent CLI for Hindsight Wiki — self-learning knowledge pages for AI agents"
license = "MIT"

[[bin]]
name = "hindsight-agent"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "6.0"

[dev-dependencies]
tempfile = "3"
